hphp/hack/test/typecheck/function_pointer/class_const_dollar_dollar_bad2.php
<?hh

final class Foo {
  public static function bar(int $x): void {}
}

final class Qux {
}

function baz(): void {
  $x = Qux::class |> $$::bar<>;
  $x('hello');
}
